package pessoa;
import java.io.Serializable;

public abstract class Pessoa implements Serializable {
    private String nome;
    private final int id;

    public Pessoa(String nome, int id) {
        this.nome = nome;
        this.id = id;
    }

    public String getNome() {
        return nome;
    }

    public void setNome(String nome) {
        this.nome = nome;
    }

    public int getId() {
        return id;
    }

    public abstract void exibirInfo();
}
